crates/value/src/object/snapshots/mu_value__object__tests__object-2.snap
---
source: crates/value/src/object/tests.rs
expression: "format!(\"display:\\n{v}\\n\\ndebug:\\n{v:#?}\")"
---
display:
{"a": 0, "b": 1}

debug:
Dict(
    {
        String(
            "a",
        ): Value {
            type: "int",
            value: 0,
        },
        String(
            "b",
        ): Value {
            type: "int",
            value: 1,
        },
    },
)
