crates/value/src/object/snapshots/mu_value__object__tests__object_value-2.snap
---
source: crates/value/src/object/tests.rs
expression: "format!(\"display:\\n{v}\\n\\ndebug:\\n{v:#?}\")"
---
display:
{"a": 0, "b": 1}

debug:
Value {
    type: "object",
    value: Some(
        Dict(
            {
                Value {
                    type: "object",
                    value: Some(
                        String(
                            "a",
                        ),
                    ),
                }: Value {
                    type: "int",
                    value: Some(
                        0,
                    ),
                },
                Value {
                    type: "object",
                    value: Some(
                        String(
                            "b",
                        ),
                    ),
                }: Value {
                    type: "int",
                    value: Some(
                        1,
                    ),
                },
            },
        ),
    ),
}
